Fix spacing around separators on Reach.Touch

--- a/style.css
+++ b/style.css
@@ -634,6 +634,9 @@ body.about .about-lines {
 .reach-touch .about-text:has(+ hr[class*="works-separator"]) {
     margin-bottom: var(--spacing-large);
 }
+.reach-touch hr[class*="works-separator"] + p.regular {
+    margin-top: var(--spacing-large);
+}
 .reach-touch .about-text:last-child {
     margin-bottom: 0;
 }
